--- a/zerofpsv2/src/zerofpsv2/engine/engine.vcproj
+++ b/zerofpsv2/src/zerofpsv2/engine/engine.vcproj
@@ -23,7 +23,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="C:\Program\codetool\include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;ENGINE_EXPORTS;ENGINE_SYSTEMS_EXPORTS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;ENGINE_EXPORTS;ENGINE_SYSTEMS_EXPORTS;BASIC_EXPORTS;GUI_EXPORTS;RENDER_EXPORTS;SCRIPT_EXPORTS"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				RuntimeTypeInfo="TRUE"
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386 /nodefaultlib:libc /nodefaultlib:libcd /nodefaultlib:libcmt"
-				AdditionalDependencies="glee.lib script_debug.lib ogg_static.lib vorbis_static.lib vorbisfile_static.lib sdl_net.lib OpenAL32.lib ALut.lib gui_debug.lib render_debug.lib basic_debug.lib glu32.lib opengl32.lib sdl.lib sdlmain.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="glee.lib script_debug.lib ogg_static.lib vorbis_static.lib vorbisfile_static.lib sdl_net.lib OpenAL32.lib ALut.lib gui_debug.lib render_debug.lib basic_debug.lib glu32.lib opengl32.lib sdl.lib sdlmain.lib odbc32.lib odbccp32.lib lua.lib lualib.lib tolua++.lib"
 				OutputFile="..\..\..\bin\engine_debug.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
@@ -93,7 +93,7 @@
 				FavorSizeOrSpeed="1"
 				OptimizeForProcessor="2"
 				AdditionalIncludeDirectories="C:\Program\codetool\include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;ENGINE_EXPORTS;ENGINE_SYSTEMS_EXPORTS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;ENGINE_EXPORTS;ENGINE_SYSTEMS_EXPORTS;BASIC_EXPORTS;GUI_EXPORTS;RENDER_EXPORTS;SCRIPT_EXPORTS"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="TRUE"
@@ -110,7 +110,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="glee.lib  script.lib ogg_static.lib vorbis_static.lib vorbisfile_static.lib sdl_net.lib OpenAL32.lib ALut.lib gui.lib render.lib basic.lib glu32.lib opengl32.lib sdl.lib sdlmain.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="glee.lib ogg_static.lib vorbis_static.lib vorbisfile_static.lib sdl_net.lib OpenAL32.lib ALut.lib glu32.lib opengl32.lib sdl.lib sdlmain.lib odbc32.lib odbccp32.lib lua.lib lualib.lib tolua++.lib"
 				OutputFile="..\..\..\bin\engine.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
@@ -581,6 +581,486 @@
 		<Filter
 			Name="Resource Files"
 			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe">
+		</Filter>
+		<Filter
+			Name="Basic"
+			Filter="">
+			<Filter
+				Name="Source"
+				Filter="">
+				<File
+					RelativePath="..\basic\basicconsole.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\cmdsystem.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\concommand.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\globals.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\image.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\jpegdec.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\line2d.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\math.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\matrix3.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\matrix4.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\plane.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\quaternion.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\rect.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\simplescript.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\vector2.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\vector3.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\vector4.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zfbasicfs_linux.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zfbasicfs_windows.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zfini.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zfmempackage.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zfresource.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zfresourcedb.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zfsubsystem.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zfsystem.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zfversion.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zfvfs.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zguifont.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zguiskin.cpp">
+				</File>
+				<File
+					RelativePath="..\basic\zifanimation.cpp">
+				</File>
+			</Filter>
+			<Filter
+				Name="Header"
+				Filter="">
+				<File
+					RelativePath="..\basic\autolist.h">
+				</File>
+				<File
+					RelativePath="..\basic\basic_x.h">
+				</File>
+				<File
+					RelativePath="..\basic\basicconsole.h">
+				</File>
+				<File
+					RelativePath="..\basic\basicconsole_script.h">
+				</File>
+				<File
+					RelativePath="..\basic\cmdsystem.h">
+				</File>
+				<File
+					RelativePath="..\basic\concommand.h">
+				</File>
+				<File
+					RelativePath="..\basic\globals.h">
+				</File>
+				<File
+					RelativePath="..\basic\image.h">
+				</File>
+				<File
+					RelativePath="..\basic\jpegdec.h">
+				</File>
+				<File
+					RelativePath="..\basic\keys.h">
+				</File>
+				<File
+					RelativePath="..\basic\line2d.h">
+				</File>
+				<File
+					RelativePath="..\basic\math.h">
+				</File>
+				<File
+					RelativePath="..\basic\matrix3.h">
+				</File>
+				<File
+					RelativePath="..\basic\matrix4.h">
+				</File>
+				<File
+					RelativePath="..\basic\os.h">
+				</File>
+				<File
+					RelativePath="..\basic\os_linux.h">
+				</File>
+				<File
+					RelativePath="..\basic\os_win32.h">
+				</File>
+				<File
+					RelativePath="..\basic\plane.h">
+				</File>
+				<File
+					RelativePath="..\basic\quaternion.h">
+				</File>
+				<File
+					RelativePath="..\basic\rect.h">
+				</File>
+				<File
+					RelativePath="..\basic\simplescript.h">
+				</File>
+				<File
+					RelativePath="..\basic\vector2.h">
+				</File>
+				<File
+					RelativePath="..\basic\vector3.h">
+				</File>
+				<File
+					RelativePath="..\basic\vector4.h">
+				</File>
+				<File
+					RelativePath="..\basic\zfassert.h">
+				</File>
+				<File
+					RelativePath="..\basic\zfbasicfs.h">
+				</File>
+				<File
+					RelativePath="..\basic\zfini.h">
+				</File>
+				<File
+					RelativePath="..\basic\zfio.h">
+				</File>
+				<File
+					RelativePath="..\basic\zfmempackage.h">
+				</File>
+				<File
+					RelativePath="..\basic\zfresource.h">
+				</File>
+				<File
+					RelativePath="..\basic\zfresourcedb.h">
+				</File>
+				<File
+					RelativePath="..\basic\zfsubsystem.h">
+				</File>
+				<File
+					RelativePath="..\basic\zfsystem.h">
+				</File>
+				<File
+					RelativePath="..\basic\zfversion.h">
+				</File>
+				<File
+					RelativePath="..\basic\zfvfs.h">
+				</File>
+				<File
+					RelativePath="..\basic\zguifont.h">
+				</File>
+				<File
+					RelativePath="..\basic\zguiskin.h">
+				</File>
+				<File
+					RelativePath="..\basic\zifanimation.h">
+				</File>
+			</Filter>
+		</Filter>
+		<Filter
+			Name="Render"
+			Filter="">
+			<Filter
+				Name="Source"
+				Filter="">
+				<File
+					RelativePath="..\render\frustum.cpp">
+				</File>
+				<File
+					RelativePath="..\render\glguirender.cpp">
+				</File>
+				<File
+					RelativePath="..\render\glslprogram.cpp">
+				</File>
+				<File
+					RelativePath="..\render\light.cpp">
+				</File>
+				<File
+					RelativePath="..\render\render.cpp">
+				</File>
+				<File
+					RelativePath="..\render\res_texture.cpp">
+				</File>
+				<File
+					RelativePath="..\render\texturemanager.cpp">
+				</File>
+				<File
+					RelativePath="..\render\zfprogram.cpp">
+				</File>
+				<File
+					RelativePath="..\render\zguirenderer.cpp">
+				</File>
+				<File
+					RelativePath="..\render\zmaterial.cpp">
+				</File>
+				<File
+					RelativePath="..\render\zocculusionquery.cpp">
+				</File>
+				<File
+					RelativePath="..\render\zshadersystem.cpp">
+				</File>
+				<File
+					RelativePath="..\render\zvertexbuffer.cpp">
+				</File>
+				<File
+					RelativePath="..\render\zvprogram.cpp">
+				</File>
+			</Filter>
+			<Filter
+				Name="Header"
+				Filter="">
+				<File
+					RelativePath="..\render\frustum.h">
+				</File>
+				<File
+					RelativePath="..\render\glguirender.h">
+				</File>
+				<File
+					RelativePath="..\render\glslprogram.h">
+				</File>
+				<File
+					RelativePath="..\render\light.h">
+				</File>
+				<File
+					RelativePath="..\render\render.h">
+				</File>
+				<File
+					RelativePath="..\render\render_x.h">
+				</File>
+				<File
+					RelativePath="..\render\res_texture.h">
+				</File>
+				<File
+					RelativePath="..\render\texturemanager.h">
+				</File>
+				<File
+					RelativePath="..\render\zfprogram.h">
+				</File>
+				<File
+					RelativePath="..\render\zguirenderer.h">
+				</File>
+				<File
+					RelativePath="..\render\zmaterial.h">
+				</File>
+				<File
+					RelativePath="..\render\zocculusionquery.h">
+				</File>
+				<File
+					RelativePath="..\render\zshadersystem.h">
+				</File>
+				<File
+					RelativePath="..\render\zvertexbuffer.h">
+				</File>
+				<File
+					RelativePath="..\render\zvprogram.h">
+				</File>
+			</Filter>
+		</Filter>
+		<Filter
+			Name="Gui"
+			Filter="">
+			<Filter
+				Name="Source"
+				Filter="">
+				<File
+					RelativePath="..\gui\zgui.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguiapp.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguibutton.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguicheckbox.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguicombobox.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguicontrol.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguicursor.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguilabel.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguilistbox.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguilistitem.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguimenu.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguiprogressbar.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguiradiobutton.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguiresourcemanager.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguiscrollbar.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguislider.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguitabctrl.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguitextbox.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguitextbox2.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguitooltip.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguitreebox.cpp">
+				</File>
+				<File
+					RelativePath="..\gui\zguiwindow.cpp">
+				</File>
+			</Filter>
+			<Filter
+				Name="Header"
+				Filter="">
+				<File
+					RelativePath="..\gui\gui_x.h">
+				</File>
+				<File
+					RelativePath="..\gui\zgui.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguiapp.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguibutton.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguicheckbox.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguicombobox.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguicontrol.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguicursor.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguilabel.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguilistbox.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguilistitem.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguimenu.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguiprogressbar.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguiradiobutton.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguiresourcemanager.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguiscrollbar.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguislider.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguitabctrl.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguitextbox.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguitooltip.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguitreebox.h">
+				</File>
+				<File
+					RelativePath="..\gui\zguiwindow.h">
+				</File>
+			</Filter>
+		</Filter>
+		<Filter
+			Name="Script"
+			Filter="">
+			<Filter
+				Name="Source"
+				Filter="">
+				<File
+					RelativePath="..\script\zfscript.cpp">
+				</File>
+			</Filter>
+			<Filter
+				Name="Header"
+				Filter="">
+				<File
+					RelativePath="..\script\script_x.h">
+				</File>
+				<File
+					RelativePath="..\script\zfscript.h">
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
