--- a/zerofpsv2/src/zeroed/zeroed.vcproj
+++ b/zerofpsv2/src/zeroed/zeroed.vcproj
@@ -95,7 +95,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="engine.lib mcommon.lib sdlmain.lib sdl.lib gui.lib render.lib basic.lib script.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="engine.lib mcommon.lib sdlmain.lib sdl.lib odbc32.lib odbccp32.lib"
 				OutputFile="..\..\bin\zeroed.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
